# E-commerce-website

./: .gitignore  README.md  build.gradle
client/: README.md  package-lock.json  package.json  tailwind.config.js
client/src/: App.jsx  index.css  main.jsx
client/src/app/: store.js
client/src/components/layout/: Footer.jsx  Header.jsx  Layout.jsx  Navbar.jsx
client/src/components/protected/: AdminRoute.jsx  ProtectedRoute.jsx
client/src/features/auth/: authSlice.js
client/src/features/cart/: cartSlice.js
client/src/pages/: AdminDashboardPage.jsx  CartPage.jsx  CheckoutPage.jsx  HomePage.jsx  LoginPage.jsx  ProductDetailsPage.jsx  ProductPage.jsx  ProfilePage.jsx  RegisterPage.jsx
client/src/services/: api.js
docs/: index.html
gradle/wrapper/: gradle-wrapper.properties
server/: .env.example  README.md  debug_imports.py  error_log_deps.txt  error_log_middleware.txt  error_log_route.txt  pyproject.toml  reset_db.py  seed.py  test_api_verification.py  test_hashing.py
server/app/: main.py
server/app/api/: admin_routes.py  auth_routes.py  deps.py  order_routes.py  product_routes.py  webhook_routes.py
server/app/core/: config.py  security.py
server/app/db/: client.py
server/app/middleware/: exception_handler.py
server/app/models/: order_model.py  product_model.py  user_model.py
server/app/schemas/: order_schema.py  product_schema.py  user_schema.py
server/app/services/: auth_service.py  cloudinary_service.py  order_service.py  payment_service.py  product_service.py
server/ecommerce_server.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
(+1 files in other folders)
